<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>PlaywrightPOM</groupId>
  <artifactId>PlaywrightPOM</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <build>
	  <plugins>
		  <plugin>
			        <groupId>org.apache.maven.plugins</groupId>
				    <artifactId>maven-compiler-plugin</artifactId>
				    <version>3.11.0</version>
				    <configuration>
			    					<source>1.8</source>
			    					<target>1.8</target>
				    </configuration>
		  </plugin>
<plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-surefire-plugin</artifactId>
    <version>3.1.2</version>
    				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					<suiteXmlFiles>
						<suiteXmlFile>./Para.xml</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
</plugin>

		  
	  </plugins>
  </build>
  <dependencies>
	  <dependency>
		    <groupId>org.testng</groupId>
		    <artifactId>testng</artifactId>
		    <version>7.7.1</version>
		    <scope></scope>
	</dependency>
			<dependency>
			    <groupId>com.microsoft.playwright</groupId>
			    <artifactId>playwright</artifactId>
			    <version>1.33.0</version>
			</dependency>
			
			<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
<dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-api</artifactId>
    <version>2.0.7</version>
</dependency>
<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
<dependency>
    <groupId>io.qameta.allure</groupId>
    <artifactId>allure-testng</artifactId>
    <version>2.23.0</version>
</dependency>


  </dependencies>
  
</project>